# Tonomat_de_dulciuri

./: CMakeLists.txt  Dulciuri.cpp  Dulciuri.h  FunctiiAjutatoare.cpp  FunctiiAjutatoare.h  Repo.cpp  Repo.h  RepoFile.cpp  RepoFile.h  Service.cpp  Service.h  Tests.cpp  Tests.h  UI.cpp  UI.h  Validator.h  main.cpp  produse.txt
Exceptions/: CantConvertToInt.h  DuplicateCode.h  EmptyCode.h  EmptyName.h  InsufficientMoney.h  InvalidCode.h  IsNotNumber.h  NegativePrice.h  ProductNotExist.h
Unutils/: NegativePrice.h
Validators/: Validator.cpp
